--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "node-sass": "4.14.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.22.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "react-toastify": "^8.1.0",
     "react-transition-group": "^4.4.2",
+    "react-use-auth": "^2.1.0-14",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
