--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "react-toastify": "^8.1.0",
     "react-transition-group": "^4.4.2",
     "react-use-auth": "^2.1.0-14",
+    "serve": "^13.0.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "serve --single ./build/Users/nicolelin/Documents/GitHub/react-store01",
+    "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
